# HW_M11_goit_py_web

HW/: README.md  hw_cheat_note.md  pyproject.toml
HW/HW_project/: main.py
HW/HW_project/src/: schemas.py
HW/HW_project/src/database/: models.py
HW/HW_project/src/repository/: contacts.py
HW/HW_project/src/routes/: contacts.py
