[tool.poetry]
name = "HW M-11"
version = "0.1.0"
description = "REST API для зберігання та управління контактами"
authors = ["Rishniak Valerii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.7"
alembic = "^1.12.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"